[gd_scene load_steps=2 format=3 uid="uid://c1qsjyux57gfv"]

[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_4l4sx"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_4l4sx")

[node name="Score" type="HBoxContainer" parent="."]
offset_right = 61.0
offset_bottom = 40.0
theme_override_constants/separation = 80

[node name="Text" type="Label" parent="Score"]
layout_mode = 2
text = "Score
"

[node name="ScoreLabel" type="Label" parent="Score"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="Lives" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -131.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/separation = 80

[node name="Text" type="Label" parent="Lives"]
layout_mode = 2
text = "Lives
"

[node name="LivesLabel" type="Label" parent="Lives"]
unique_name_in_owner = true
layout_mode = 2
text = "2"
horizontal_alignment = 2

[node name="GameOver" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="GameOver"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESTART
"

[node name="QuitButton" type="Button" parent="GameOver"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT
"

[connection signal="pressed" from="GameOver/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOver/QuitButton" to="." method="_on_quit_button_pressed"]
